--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,13 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="/static/googlefonts/Oswald-VariableFont_wght.ttf">
+    <link href="/static/googlefonts/Lato-Regular.ttf">
     <link
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="../src/assets/img/gibson.svg" type="image/x-icon">
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
