--- a/public/index.html
+++ b/public/index.html
@@ -12,15 +12,19 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="/static/googlefonts/Oswald-VariableFont_wght.ttf">
-    <link href="/static/googlefonts/Lato-Regular.ttf">
+    <link href="/static/googlefonts/Oswald-VariableFont_wght.ttf" />
+    <link href="/static/googlefonts/Lato-Regular.ttf" />
     <link
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="../src/assets/img/gibson.svg" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="../src/assets/img/gibson.svg"
+      type="image/x-icon"
+    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Luxe Harmony | Shop</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
