--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,11 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="/static/googlefonts/Oswald-VariableFont_wght.ttf" />
     <link href="/static/googlefonts/Lato-Regular.ttf" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Open+Sans:wght@300&display=swap"
       rel="stylesheet"
     />
     <link
