--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link href="/static/googlefonts/Oswald-VariableFont_wght.ttf" />
     <link href="/static/googlefonts/Lato-Regular.ttf" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Open+Sans:wght@300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nanum+Gothic&display=swap"
       rel="stylesheet"
     />
     <link
